--- a/index.html
+++ b/index.html
@@ -31,11 +31,6 @@
 <meta property="og:url" content="https://www.bodalejandroyandrea.com">
 
 
-
-
-
-
-
   <style>
     :root {
       --brand: #b87b5a;
@@ -50,17 +45,10 @@
     * { box-sizing: border-box; }
     html, body { height: 100%; margin: 0; padding: 0; }
 
-    body {
-      background:
-        radial-gradient(60rem 60rem at 120% -10%, rgba(184,123,90,.12), transparent 60%),
-        radial-gradient(60rem 60rem at -20% 110%, rgba(184,123,90,.10), transparent 60%),
-        url('mi_foto_boda_v37.png') center/cover no-repeat;
-      background-attachment: scroll;
-      background-size: cover;
-      background-repeat: no-repeat;
-      background-position: center top;
-    }
-     html, body { min-height: 100%; height: auto; }
+ body {
+  background: linear-gradient(to bottom, #fdfaf7 0%, #f9f3ee 100%);
+  color: #2b2b2b;
+}
 
     .header {
       text-align: center;
@@ -418,19 +406,28 @@
 
 /* Estado inicial */
 #portada {
-  opacity: 1;
-  visibility: visible;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background: linear-gradient(to bottom, #fdfaf7 0%, #f9f3ee 100%);
 }
+
 #accesos {
   min-height: 100vh;
-  background: url('mi_foto_boda_v24.jpg') center/cover no-repeat;
-  background-attachment: scroll;
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center;
+  background: linear-gradient(to bottom, #fdfaf7 0%, #f9f3ee 100%);
   padding: 20px 0;
   margin-top: 30px;
 
+  opacity: 0;
+  visibility: hidden;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  transition: opacity 0.8s ease-in-out, visibility 0.8s;
+}
   /* para transición */
   opacity: 0;
   visibility: hidden;
@@ -1296,4 +1293,5 @@ document.addEventListener("DOMContentLoaded", () => {
 
 </body>
 </html>
+
 
