--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 <link rel="shortcut icon" href="mi_foto_boda_v31.png">
 
 <!-- Tipografías -->
+<link href="https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap" rel="stylesheet">)
 <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&display=swap" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css2?family=Lora&display=swap" rel="stylesheet">
@@ -45,9 +46,11 @@
     * { box-sizing: border-box; }
     html, body { height: 100%; margin: 0; padding: 0; }
 
- body {
+body {
+  margin: 0;
   background: linear-gradient(to bottom, #fdfaf7 0%, #f9f3ee 100%);
   color: #2b2b2b;
+  font-family: 'Lora', serif;
 }
 
     .header {
@@ -69,15 +72,24 @@
     }
 
     .subtitle {
-      font-family: 'Bradley Hand ITC', cursive, sans-serif;
+      font-family: 'Dancing Script', cursive;
       font-size: 24px!important;
       line-height: 1.5;
       margin: 0;
       color: #808000 !important;
       font-weight: 700;
     }
+    #portada {
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background: linear-gradient(to bottom, #fdfaf7 0%, #f9f3ee 100%);
+  transition: opacity 0.8s ease-in-out, visibility 0.8s;
+}
 
-    /* Icono de portada */
+   /* Icono de portada */
 #portada .icon-container {
   display: flex;
   justify-content: center;
@@ -85,6 +97,19 @@
   flex-wrap: wrap;
   gap: 16px;
   max-width: 720px;
+}
+    #accesos {
+  min-height: 100vh;
+  background: linear-gradient(to bottom, #fdfaf7 0%, #f9f3ee 100%);
+  padding: 20px 0;
+  margin-top: 30px;
+  opacity: 0;
+  visibility: hidden;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  transition: opacity 0.8s ease-in-out, visibility 0.8s;
 }
 
 /* Iconos de accesos */
@@ -404,29 +429,6 @@
   transition: opacity 0.8s ease-in-out, visibility 0.8s;
 }
 
-/* Estado inicial */
-#portada {
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  background: linear-gradient(to bottom, #fdfaf7 0%, #f9f3ee 100%);
-}
-
-#accesos {
-  min-height: 100vh;
-  background: linear-gradient(to bottom, #fdfaf7 0%, #f9f3ee 100%);
-  padding: 20px 0;
-  margin-top: 30px;
-  opacity: 0;
-  visibility: hidden;
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  transition: opacity 0.8s ease-in-out, visibility 0.8s;
-}
 
 /* Cuando se activa */
 #portada.hide {
@@ -482,14 +484,7 @@
   100% {
     transform: scale(1);
   }
-}
-    #portada {
-  min-height: 100vh;            /* ocupa toda la ventana */
-  display: flex;
-  flex-direction: column;
-  justify-content: center;      /* centra verticalmente */
-  align-items: center;
-}
+
     .intro-traslado {
   font-size: 16px;
   line-height: 1.5;
@@ -1285,6 +1280,7 @@ document.addEventListener("DOMContentLoaded", () => {
 
 </body>
 </html>
+
 
 
 
