--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <link rel="shortcut icon" href="mi_foto_boda_v31.png">
 
 <!-- Tipografías -->
-<link href="https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap" rel="stylesheet">)
+<link href="https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&display=swap" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css2?family=Lora&display=swap" rel="stylesheet">
@@ -484,6 +484,7 @@ body {
   100% {
     transform: scale(1);
   }
+    }
 
     .intro-traslado {
   font-size: 16px;
@@ -1280,6 +1281,7 @@ document.addEventListener("DOMContentLoaded", () => {
 
 </body>
 </html>
+
 
 
 
