--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
 body {
   margin: 0;
-  background: linear-gradient(to bottom, #fdfaf7 0%, #f9f3ee 100%);
+ background: linear-gradient(to bottom, #f5d8a9 0%, #f1cfa0 100%);
   color: #2b2b2b;
   font-family: 'Lora', serif;
 }
@@ -85,7 +85,7 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  background: linear-gradient(to bottom, #fdfaf7 0%, #f9f3ee 100%);
+  background: linear-gradient(to bottom, #f5d8a9 0%, #f1cfa0 100%);
   transition: opacity 0.8s ease-in-out, visibility 0.8s;
 }
 
@@ -100,7 +100,7 @@ body {
 }
     #accesos {
   min-height: 100vh;
-  background: linear-gradient(to bottom, #fdfaf7 0%, #f9f3ee 100%);
+  background: linear-gradient(to bottom, #f5d8a9 0%, #f1cfa0 100%);
   padding: 20px 0;
   margin-top: 30px;
   opacity: 0;
@@ -1281,6 +1281,7 @@ document.addEventListener("DOMContentLoaded", () => {
 
 </body>
 </html>
+
 
 
 
