--- a/index.html
+++ b/index.html
@@ -18,7 +18,6 @@
 <link rel="shortcut icon" href="mi_foto_boda_v31.png">
 
 <!-- Tipografías -->
-<link href="https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&display=swap" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css2?family=Lora&display=swap" rel="stylesheet">
@@ -46,12 +45,17 @@
     * { box-sizing: border-box; }
     html, body { height: 100%; margin: 0; padding: 0; }
 
-body {
-  margin: 0;
- background: linear-gradient(to bottom, #f5d8a9 0%, #f1cfa0 100%);
-  color: #2b2b2b;
-  font-family: 'Lora', serif;
-}
+    body {
+      background:
+        radial-gradient(60rem 60rem at 120% -10%, rgba(184,123,90,.12), transparent 60%),
+        radial-gradient(60rem 60rem at -20% 110%, rgba(184,123,90,.10), transparent 60%),
+        url('mi_foto_boda_v37.png') center/cover no-repeat;
+      background-attachment: scroll;
+      background-size: cover;
+      background-repeat: no-repeat;
+      background-position: center top;
+    }
+     html, body { min-height: 100%; height: auto; }
 
     .header {
       text-align: center;
@@ -72,24 +76,15 @@ body {
     }
 
     .subtitle {
-      font-family: 'Dancing Script', cursive;
+      font-family: 'Bradley Hand ITC', cursive, sans-serif;
       font-size: 24px!important;
       line-height: 1.5;
       margin: 0;
       color: #808000 !important;
       font-weight: 700;
     }
-    #portada {
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  background: linear-gradient(to bottom, #f5d8a9 0%, #f1cfa0 100%);
-  transition: opacity 0.8s ease-in-out, visibility 0.8s;
-}
 
-   /* Icono de portada */
+    /* Icono de portada */
 #portada .icon-container {
   display: flex;
   justify-content: center;
@@ -97,19 +92,6 @@ body {
   flex-wrap: wrap;
   gap: 16px;
   max-width: 720px;
-}
-    #accesos {
-  min-height: 100vh;
-  background: linear-gradient(to bottom, #f5d8a9 0%, #f1cfa0 100%);
-  padding: 20px 0;
-  margin-top: 30px;
-  opacity: 0;
-  visibility: hidden;
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  transition: opacity 0.8s ease-in-out, visibility 0.8s;
 }
 
 /* Iconos de accesos */
@@ -221,19 +203,32 @@ body {
       transform: scale(1.05);
     }
 
-    .actions { display: flex; flex-direction: column; align-items: center; gap: 12px; margin-top: 20px; }
-    button[type="submit"] {
-      padding: 12px 18px;
-      border: 0;
-      border-radius: 999px;
-      background: var(--brand);
-      color: #fff;
-      font-weight: 600;
-      font-size: 15px;
-      cursor: pointer;
-      box-shadow: 0 6px 14px rgba(184,123,90,.28);
-    }
-    button[type="submit"]:hover { filter: brightness(.97); }
+   .actions {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 12px;
+  margin-top: 20px;
+}
+
+/* Botón de Enviar confirmación (ahora granate, igual que el de Recuerdos) */
+button[type="submit"] {
+  padding: 12px 18px;
+  border: 0;
+  border-radius: 999px;
+  background: #a00034; /* granate */
+  color: #fff;
+  font-weight: 600;
+  font-size: 15px;
+  cursor: pointer;
+  box-shadow: 0 6px 14px rgba(0,0,0,0.2); /* igual que el de Recuerdos */
+  transition: all 0.3s ease;
+}
+
+button[type="submit"]:hover {
+  filter: brightness(0.9);
+  transform: translateY(-2px);
+}
 
     .footer { padding: 12px 24px 24px; text-align: center; font-size: 12px; color: #000; }
 
@@ -429,6 +424,29 @@ body {
   transition: opacity 0.8s ease-in-out, visibility 0.8s;
 }
 
+/* Estado inicial */
+#portada {
+  opacity: 1;
+  visibility: visible;
+}
+#accesos {
+  min-height: 100vh;
+  background: url('mi_foto_boda_v24.jpg') center/cover no-repeat;
+  background-attachment: scroll;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  padding: 20px 0;
+  margin-top: 30px;
+
+  /* para transición */
+  opacity: 0;
+  visibility: hidden;
+  position: absolute;
+  top: 0; left: 0;
+  width: 100%;
+  transition: opacity 0.8s ease-in-out, visibility 0.8s;
+}
 
 /* Cuando se activa */
 #portada.hide {
@@ -445,7 +463,6 @@ body {
   visibility: visible;
   position: relative; /* vuelve a su flujo normal */
 }
-
    .wedding-date {
   font-size: 55px;        /* tamaño similar a la frase "Cuenta atrás" */
   font-weight: 700;
@@ -484,8 +501,14 @@ body {
   100% {
     transform: scale(1);
   }
-    }
-
+}
+    #portada {
+  min-height: 100vh;            /* ocupa toda la ventana */
+  display: flex;
+  flex-direction: column;
+  justify-content: center;      /* centra verticalmente */
+  align-items: center;
+}
     .intro-traslado {
   font-size: 16px;
   line-height: 1.5;
@@ -736,6 +759,25 @@ body {
   font-size: 24px; 
   color: #000;  /* verde oliva */
 }
+    /* 📸 Foto debajo de los modales */
+.boda-foto {
+  width: 100%;
+  max-width: 900px;           /* límite para pantallas grandes */
+  margin: 30px auto;
+  border-radius: 16px;        /* bordes suaves */
+  overflow: hidden;           /* oculta posibles bordes sobrantes */
+  box-shadow: 0 6px 18px rgba(0,0,0,0.2);
+}
+
+.boda-foto img {
+  width: 100%;
+  height: auto;
+  display: block;
+  object-fit: cover;          /* mantiene proporciones */
+  border-radius: 16px;
+}
+
+    
     .logo-fecha {
   text-align: center;
   margin-top: 15px;
@@ -763,6 +805,33 @@ body {
 .modal.show .ubicacion-content {
   opacity: 1;
   transform: translateY(0);      /* vuelve a su sitio */
+}
+    .asistencia-title h3 {
+  font-family: 'Playfair Display', serif;
+  font-size: 26px;
+  font-weight: 700;
+  color: #000;
+  text-align: center;
+  margin-top: 10px;
+  margin-bottom: 15px;
+}
+/* Animación para mostrar el campo de acompañantes */
+#rowAcompanantesNombres {
+  opacity: 0;
+  max-height: 0;
+  transform: translateY(-10px); /* se desliza un poco hacia abajo */
+  overflow: hidden;
+  transition: 
+    opacity 0.8s ease,
+    max-height 0.8s ease,
+    transform 0.8s ease;
+}
+
+/* Cuando se muestra */
+#rowAcompanantesNombres.show {
+  opacity: 1;
+  max-height: 200px;
+  transform: translateY(0);
 }
 
 
@@ -831,6 +900,12 @@ body {
       <span>Rincón de los recuerdos</span>
     </button>
   </div>
+  <!-- 📸 Foto debajo de los accesos -->
+<div class="boda-foto">
+  <img src="mi_foto_boda_v39.JPG" alt="Foto de compromiso Alejandro y Andrea">
+</div>
+
+  
    <div class="logo-fecha">
   <img src="mi_foto_boda_v31.png" alt="Logo iniciales Alejandro y Andrea">
 </div>
@@ -842,61 +917,81 @@ body {
 
   <!-- Aquí siguen tus modales (Asistencia, Traslado, Recuerdos) tal cual los tienes -->
 
-  <!-- Modal Asistencia -->
+<!-- Modal Asistencia -->
 <div id="asistenciaModal" class="modal" role="dialog" aria-modal="true" aria-labelledby="asistenciaTitle">
   <div class="asistencia-content">
-   <button id="closeAsistencia" aria-label="Cerrar formulario" class="close-btn">
-  <img src="mi_foto_boda_v36.png" alt="Cerrar">
-</button>
+    <button id="closeAsistencia" aria-label="Cerrar formulario" class="close-btn">
+      <img src="mi_foto_boda_v36.png" alt="Cerrar">
+    </button>
 
-   <div class="asistencia-title">
-  <img src="mi_foto_boda_v32.png" alt="Cuestionario de asistencia">
+    <div class="asistencia-title">
+      <img src="mi_foto_boda_v32.png" alt="Cuestionario de asistencia">
+      <h3>Cuestionario de asistencia</h3>
+    </div>
+
+    <form id="rsvpForm" action="https://script.google.com/macros/s/AKfycbyR0kDkPjKhyVGAqirWjeG7KxL917Tz1tfJOo17r6v06V4JT2cPcjjHyYR8_CvZ_Ab-Kg/exec" method="POST" novalidate>
+      <div class="grid">
+
+        <div class="row">
+          <label for="nombre">Nombre y apellidos *</label>
+          <input id="nombre" name="nombre" type="text" required placeholder="Ej. Ana Pérez" />
+        </div>
+
+        <div class="row">
+          <label>¿Asistirás a la boda? *</label>
+          <div class="radio-row">
+            <label class="chip"><input type="radio" name="asistencia" value="sí" required /><span>Sí</span></label>
+            <label class="chip"><input type="radio" name="asistencia" value="no" required /><span>No</span></label>
+          </div>
+        </div>
+
+        <div class="row">
+          <label for="acompanantes">¿Cuántos acompañantes?</label>
+          <input id="acompanantes" name="acompanantes" type="number" min="0" max="10" value="0" />
+        </div>
+
+        <div class="row" id="rowAcompanantesNombres">
+  <label for="acompanantesNombres">Nombre y apellidos de los acompañantes</label>
+  <input id="acompanantesNombres" name="acompanantesNombres" type="text" placeholder="Ej. Juan Gómez, María López..." />
 </div>
-      <form id="rsvpForm" action="https://script.google.com/macros/s/AKfycbyR0kDkPjKhyVGAqirWjeG7KxL917Tz1tfJOo17r6v06V4JT2cPcjjHyYR8_CvZ_Ab-Kg/exec" method="POST" novalidate>
-        <div class="grid">
-          <div class="row">
-            <label for="nombre">Nombre y apellidos *</label>
-            <input id="nombre" name="nombre" type="text" required placeholder="Ej. Ana Pérez" />
-          </div>
-          <div class="row">
-            <label>¿Asistirás a la boda? *</label>
-            <div class="radio-row">
-              <label class="chip"><input type="radio" name="asistencia" value="sí" required /><span>Sí</span></label>
-              <label class="chip"><input type="radio" name="asistencia" value="no" required /><span>No</span></label>
-            </div>
-          </div>
-          <div class="row">
-            <label for="acompanantes">¿Cuántos acompañantes?</label>
-            <input id="acompanantes" name="acompanantes" type="number" min="0" max="10" value="0" />
-          </div>
-          <div class="row">
-            <label>¿Utilizarás el servicio de autobús?</label>
-            <div class="radio-row">
-              <label class="chip"><input type="radio" name="autobus" value="sí" /><span>Sí</span></label>
-              <label class="chip"><input type="radio" name="autobus" value="no" /><span>No</span></label>
-            </div>
-          </div>
-        </div>
+
+
         <div class="row">
-          <label for="alergias">¿Tienes alguna alergia, intolerancia o preferencia alimentaria?</label>
-          <input id="alergias" name="alergias" type="text" placeholder="Ej. sin gluten, frutos secos, vegetariano..." />
+          <label>¿Utilizarás el servicio de autobús?</label>
+          <div class="radio-row">
+            <label class="chip"><input type="radio" name="autobus" value="sí" /><span>Sí</span></label>
+            <label class="chip"><input type="radio" name="autobus" value="no" /><span>No</span></label>
+          </div>
         </div>
-        <div class="row">
-          <label for="mensaje">¿Qué canción te gusta para que suene en la fiesta?</label>
-          <textarea id="mensaje" name="mensaje" placeholder=" "></textarea>
-        </div>
-        <div class="actions"><button type="submit">Enviar confirmación</button></div>
-      </form>
-      <div class="success" id="successBox" role="status" aria-live="polite">
-        <h3>¡Gracias por tu respuesta! 💌</h3>
-        <p>Hemos registrado tu confirmación. Puedes cerrar esta página.</p>
+
       </div>
-      <div class="error" id="errorBox" role="alert">
-        <h3>Vaya, algo no ha ido bien…</h3>
-        <p>Inténtalo de nuevo en unos segundos o avisa a los novios.</p>
+
+      <div class="row">
+        <label for="alergias">¿Tienes alguna alergia, intolerancia o preferencia alimentaria?</label>
+        <input id="alergias" name="alergias" type="text" placeholder="Ej. sin gluten, frutos secos, vegetariano..." />
       </div>
+
+      <div class="row">
+        <label for="mensaje">¿Qué canción te gusta para que suene en la fiesta?</label>
+        <textarea id="mensaje" name="mensaje" placeholder=" "></textarea>
+      </div>
+
+      <div class="actions">
+        <button type="submit">Enviar confirmación</button>
+      </div>
+    </form>
+
+    <div class="success" id="successBox" role="status" aria-live="polite">
+      <h3>¡Gracias por tu respuesta! 💌</h3>
+      <p>Hemos registrado tu confirmación. Puedes cerrar esta página.</p>
+    </div>
+
+    <div class="error" id="errorBox" role="alert">
+      <h3>Vaya, algo no ha ido bien…</h3>
+      <p>Inténtalo de nuevo en unos segundos o avisa a los novios.</p>
     </div>
   </div>
+</div>
 
 <!-- Modal Traslado -->
 <div id="trasladoModal" class="modal" role="dialog" aria-modal="true" aria-labelledby="trasladoTitle">
@@ -1202,6 +1297,24 @@ document.addEventListener("DOMContentLoaded", () => {
       }
     });
   })();
+     /* ---------- Mostrar/ocultar campo de acompañantes (con animación) ---------- */
+  const inputAcompanantes = document.getElementById("acompanantes");
+  const rowAcompanantesNombres = document.getElementById("rowAcompanantesNombres");
+  const inputAcompanantesNombres = document.getElementById("acompanantesNombres");
+
+  if (inputAcompanantes && rowAcompanantesNombres) {
+    inputAcompanantes.addEventListener("input", () => {
+      const num = parseInt(inputAcompanantes.value, 10);
+      if (num > 0) {
+        rowAcompanantesNombres.classList.add("show");
+      } else {
+        rowAcompanantesNombres.classList.remove("show");
+        inputAcompanantesNombres.value = "";
+      }
+    });
+  }
+
+
 
   /* ---------- Modal Traslado ---------- */
   const trasladoBtn = document.getElementById("trasladoBtn");
@@ -1281,6 +1394,9 @@ document.addEventListener("DOMContentLoaded", () => {
 
 </body>
 </html>
+
+</html>
+
 
 
 
