--- a/index.html
+++ b/index.html
@@ -265,28 +265,49 @@
 
     .close-btn img { width: 28px; }
     /* === ESTILO FINAL DEL FORMULARIO DE ASISTENCIA === */
-#rsvpForm {
-  display: flex;
-  flex-direction: column;
-  gap: 16px;
-  font-family: 'Playfair Display', serif;
-  font-size: 16px;
+/* === MODAL DE ASISTENCIA === */
+.asistencia-content {
+  background: #f8f1e3; /* crema elegante sin imagen */
+  border-radius: 18px;
+  padding: 30px 25px;
+  max-width: 650px;
+  width: 90%;
   color: #2b2b2b;
-  margin-top: 10px;
+  border: 2px solid #000;
+  box-shadow: 0 8px 24px rgba(0, 0, 0, 0.25);
+  position: relative;
+  z-index: 1001;
+  font-family: 'Lora', serif;
   text-align: center;
+  animation: fadeInUp 0.6s ease;
 }
 
-#rsvpForm label {
+.asistencia-content img {
+  max-width: 100px;
+  display: block;
+  margin: 0 auto;
+}
+
+.asistencia-content h3 {
+  font-family: 'Playfair Display', serif;
+  font-size: 26px;
   font-weight: 700;
+  color: #000;
+  margin-top: 10px;
+  margin-bottom: 15px;
+}
+
+.asistencia-content label {
+  font-weight: 600;
   color: #2b2b2b;
   display: block;
   margin-bottom: 6px;
-  font-size: 15px;
+  text-align: center;
 }
 
-#rsvpForm input[type="text"],
-#rsvpForm input[type="number"],
-#rsvpForm textarea {
+.asistencia-content input[type="text"],
+.asistencia-content input[type="number"],
+.asistencia-content textarea {
   width: 100%;
   padding: 10px 12px;
   border-radius: 10px;
@@ -299,31 +320,30 @@
   transition: all 0.3s ease;
 }
 
-#rsvpForm input:focus,
-#rsvpForm textarea:focus {
+.asistencia-content input:focus,
+.asistencia-content textarea:focus {
   border-color: #a00034;
   box-shadow: 0 0 6px rgba(160, 0, 52, 0.25);
   outline: none;
 }
 
-#rsvpForm textarea {
+.asistencia-content textarea {
   min-height: 60px;
   resize: vertical;
 }
 
-/* === Radios personalizados (Sí / No) === */
-#rsvpForm div[style*="display:flex"] {
+.radio-row {
+  display: flex;
   justify-content: center;
-  gap: 18px !important;
-  margin: 10px 0;
+  gap: 18px;
+  margin-top: 8px;
 }
 
-#rsvpForm input[type="radio"] {
+.chip input[type="radio"] {
   display: none;
 }
 
-#rsvpForm label input[type="radio"] + span,
-#rsvpForm label span {
+.chip span {
   border: 2px solid #a00034;
   border-radius: 999px;
   padding: 6px 20px;
@@ -333,29 +353,40 @@
   transition: all 0.3s ease;
 }
 
-#rsvpForm input[type="radio"]:checked + span,
-#rsvpForm label input[type="radio"]:checked + span {
+.chip input[type="radio"]:checked + span {
   background-color: #a00034;
   color: white;
 }
 
-/* === Botón principal === */
-#rsvpForm button[type="submit"] {
+.actions {
+  text-align: center;
+  margin-top: 15px;
+}
+
+.actions button {
+  padding: 12px 28px;
+  border: none;
+  border-radius: 999px;
   background: #a00034;
   color: #fff;
-  padding: 12px 28px;
-  border-radius: 999px;
-  font-weight: bold;
+  font-weight: 600;
   font-family: 'Lora', serif;
-  border: none;
+  font-size: 15px;
   cursor: pointer;
-  margin-top: 12px;
   transition: background 0.3s ease;
 }
 
-#rsvpForm button[type="submit"]:hover {
+.actions button:hover {
   background: #8a0030;
 }
+
+.success, .error {
+  display: none;
+  margin-top: 20px;
+  text-align: center;
+  font-family: 'Playfair Display', serif;
+}
+
 
   </style>
 </head>
@@ -427,38 +458,85 @@
 
   </div>
 
-  <!-- MODAL ASISTENCIA -->
-  <div id="asistenciaModal" class="modal">
-    <div class="modal-content">
-      <button class="close-btn" id="closeAsistencia"><img src="mi_foto_boda_v36.png" alt="Cerrar"></button>
-      <div class="asistencia-title">
-        <img src="mi_foto_boda_v32.png" alt="Cuestionario de asistencia" style="max-width:100px;display:block;margin:0 auto;">
-        <h3 style="text-align:center;font-family:'Playfair Display',serif;font-size:26px;font-weight:700;color:#000;margin-top:10px;margin-bottom:15px;">Cuestionario de asistencia</h3>
-      </div>
-      <!-- formulario original idéntico -->
-      <form id="rsvpForm" action="https://script.google.com/macros/s/AKfycbyR0kDkPjKhyVGAqirWjeG7KxL917Tz1tfJOo17r6v06V4JT2cPcjjHyYR8_CvZ_Ab-Kg/exec" method="POST" novalidate>
-        <label for="nombre">Nombre y apellidos *</label>
-        <input id="nombre" name="nombre" type="text" required placeholder="Ej. Ana Pérez">
-        <label>¿Asistirás a la boda? *</label>
-       <div style="display:flex;justify-content:center;gap:10px;">
-  <label><input type="radio" name="asistencia" value="sí" required><span>Sí</span></label>
-  <label><input type="radio" name="asistencia" value="no" required><span>No</span></label>
-</div>
+ <!-- MODAL ASISTENCIA -->
+<div id="asistenciaModal" class="modal" role="dialog" aria-modal="true" aria-labelledby="asistenciaTitle">
+  <div class="asistencia-content">
+    <button id="closeAsistencia" aria-label="Cerrar formulario" class="close-btn">
+      <img src="mi_foto_boda_v36.png" alt="Cerrar">
+    </button>
 
-        <label for="acompanantes">¿Cuántos acompañantes?</label>
-        <input id="acompanantes" name="acompanantes" type="number" min="0" max="10" value="0">
-        <label for="alergias">¿Tienes alguna alergia o preferencia alimentaria?</label>
-        <input id="alergias" name="alergias" type="text">
+    <div class="asistencia-title">
+      <img src="mi_foto_boda_v32.png" alt="Cuestionario de asistencia">
+      <h3>Cuestionario de asistencia</h3>
+    </div>
+
+    <form id="rsvpForm"
+      action="https://script.google.com/macros/s/AKfycbyR0kDkPjKhyVGAqirWjeG7KxL917Tz1tfJOo17r6v06V4JT2cPcjjHyYR8_CvZ_Ab-Kg/exec"
+      method="POST" novalidate>
+      <div class="grid">
+
+        <div class="row">
+          <label for="nombre">Nombre y apellidos *</label>
+          <input id="nombre" name="nombre" type="text" required placeholder="Ej. Ana Pérez" />
+        </div>
+
+        <div class="row">
+          <label>¿Asistirás a la boda? *</label>
+          <div class="radio-row">
+            <label class="chip"><input type="radio" name="asistencia" value="sí" required /><span>Sí</span></label>
+            <label class="chip"><input type="radio" name="asistencia" value="no" required /><span>No</span></label>
+          </div>
+        </div>
+
+        <div class="row">
+          <label for="acompanantes">¿Cuántos acompañantes?</label>
+          <input id="acompanantes" name="acompanantes" type="number" min="0" max="10" value="0" />
+        </div>
+
+        <div class="row" id="rowAcompanantesNombres">
+          <label for="acompanantesNombres">Nombre y apellidos de los acompañantes</label>
+          <input id="acompanantesNombres" name="acompanantesNombres" type="text"
+            placeholder="Ej. Juan Gómez, María López..." />
+        </div>
+
+        <div class="row">
+          <label>¿Utilizarás el servicio de autobús?</label>
+          <div class="radio-row">
+            <label class="chip"><input type="radio" name="autobus" value="sí" /><span>Sí</span></label>
+            <label class="chip"><input type="radio" name="autobus" value="no" /><span>No</span></label>
+          </div>
+        </div>
+
+      </div>
+
+      <div class="row">
+        <label for="alergias">¿Tienes alguna alergia, intolerancia o preferencia alimentaria?</label>
+        <input id="alergias" name="alergias" type="text"
+          placeholder="Ej. sin gluten, frutos secos, vegetariano..." />
+      </div>
+
+      <div class="row">
         <label for="mensaje">¿Qué canción te gusta para que suene en la fiesta?</label>
         <textarea id="mensaje" name="mensaje" placeholder=" "></textarea>
-        <div style="text-align:center;margin-top:15px;">
-          <button type="submit" style="padding:10px 18px;border:0;border-radius:999px;background:#a00034;color:#fff;font-weight:600;font-size:15px;cursor:pointer;">Enviar confirmación</button>
-        </div>
-      </form>
-      <div id="successBox" style="display:none;text-align:center;margin-top:15px;"><h3>¡Gracias por tu respuesta! 💌</h3></div>
-      <div id="errorBox" style="display:none;text-align:center;margin-top:15px;"><h3>Vaya, algo no ha ido bien…</h3></div>
+      </div>
+
+      <div class="actions">
+        <button type="submit">Enviar confirmación</button>
+      </div>
+    </form>
+
+    <div class="success" id="successBox" role="status" aria-live="polite">
+      <h3>¡Gracias por tu respuesta! 💌</h3>
+      <p>Hemos registrado tu confirmación. Puedes cerrar esta página.</p>
+    </div>
+
+    <div class="error" id="errorBox" role="alert">
+      <h3>Vaya, algo no ha ido bien…</h3>
+      <p>Inténtalo de nuevo en unos segundos o avisa a los novios.</p>
     </div>
   </div>
+</div>
+
 
   <!-- MODAL TRASLADO -->
   <div id="trasladoModal" class="modal">
@@ -687,6 +765,7 @@ document.addEventListener("DOMContentLoaded", () => {
   }
 });
 </script>
+
 
 
 
