--- a/index.html
+++ b/index.html
@@ -265,127 +265,191 @@
 
     .close-btn img { width: 28px; }
     /* === ESTILO FINAL DEL FORMULARIO DE ASISTENCIA === */
-/* === MODAL DE ASISTENCIA === */
-.asistencia-content {
-  background: #f8f1e3; /* crema elegante sin imagen */
-  border-radius: 18px;
-  padding: 30px 25px;
-  max-width: 650px;
-  width: 90%;
-  color: #2b2b2b;
-  border: 2px solid #000;
-  box-shadow: 0 8px 24px rgba(0, 0, 0, 0.25);
+/* === MODAL ASISTENCIA === */
+#asistenciaModal {
+  position: fixed;
+  z-index: 1000;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  justify-content: center;
+  align-items: center;
+  padding: 20px;
+  box-sizing: border-box;
+  background: #f8f1e3; /* 👈 Fondo crema, SIN imagen */
+}
+
+#asistenciaModal .asistencia-content {
+  background: rgba(248,229,216,0.80); /* crema semitransparente */
+  border-radius: 12px;
+  max-width: 600px;
+  width: 100%;
+  max-height: 90%;
+  overflow-y: auto;
   position: relative;
-  z-index: 1001;
-  font-family: 'Lora', serif;
+  padding: 20px;
+  border: 2px solid #000000; /* ⚫ borde negro */
+}
+
+/* === Título del modal === */
+.asistencia-title {
   text-align: center;
-  animation: fadeInUp 0.6s ease;
+  margin-bottom: 20px;
 }
 
-.asistencia-content img {
+.asistencia-title img {
   max-width: 100px;
-  display: block;
-  margin: 0 auto;
+  height: auto;
+  display: inline-block;
 }
 
-.asistencia-content h3 {
+.asistencia-title h3 {
   font-family: 'Playfair Display', serif;
   font-size: 26px;
   font-weight: 700;
   color: #000;
+  text-align: center;
   margin-top: 10px;
   margin-bottom: 15px;
 }
 
-.asistencia-content label {
-  font-weight: 600;
-  color: #2b2b2b;
-  display: block;
-  margin-bottom: 6px;
+/* === Formulario === */
+#rsvpForm {
+  max-width: 320px;
+  margin: 0 auto;
   text-align: center;
+  box-sizing: border-box;
 }
 
-.asistencia-content input[type="text"],
-.asistencia-content input[type="number"],
-.asistencia-content textarea {
+#rsvpForm input,
+#rsvpForm select,
+#rsvpForm textarea {
   width: 100%;
-  padding: 10px 12px;
-  border-radius: 10px;
-  border: 2px solid #2b2b2b;
-  font-size: 15px;
-  background-color: #fff;
-  color: #333;
+  max-width: 300px;
+  margin: 0 auto 15px;
+  display: block;
   text-align: center;
-  font-family: 'Lora', serif;
-  transition: all 0.3s ease;
+  box-sizing: border-box;
+  padding: 12px 14px;
+  border-radius: 12px;
+  font-size: 15px;
+  background: rgba(250,240,240,1);
+  font-weight: bold;
+  color: #000;
+  border: 2px solid #000000;
 }
 
-.asistencia-content input:focus,
-.asistencia-content textarea:focus {
-  border-color: #a00034;
-  box-shadow: 0 0 6px rgba(160, 0, 52, 0.25);
-  outline: none;
+label {
+  display: inline-block;
+  font-size: 20px;
+  color: #000;
+  margin: 12px 0 6px;
+  font-weight: bold;
+  background: rgba(250,240,240,1);
+  padding: 2px 6px;
+  border-radius: 4px;
+  border: 2px solid #000000;
 }
 
-.asistencia-content textarea {
-  min-height: 60px;
-  resize: vertical;
-}
-
+/* === Botones tipo chip === */
 .radio-row {
   display: flex;
+  flex-wrap: wrap;
+  gap: 12px;
   justify-content: center;
-  gap: 18px;
-  margin-top: 8px;
 }
 
-.chip input[type="radio"] {
-  display: none;
+.chip {
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  padding: 10px 18px;
+  border: 2px solid var(--brand, #b87b5a);
+  border-radius: 999px;
+  cursor: pointer;
+  user-select: none;
+  font-weight: bold;
+  transition: all 0.2s ease-in-out;
+  color: var(--ink, #2b2b2b);
+  background: rgba(250,240,240,0.8);
+  font-size: 16px;
+  position: relative;
+}
+
+.chip input {
+  position: absolute;
+  opacity: 0;
+  pointer-events: none;
 }
 
 .chip span {
-  border: 2px solid #a00034;
-  border-radius: 999px;
-  padding: 6px 20px;
-  font-weight: bold;
-  color: #a00034;
-  cursor: pointer;
-  transition: all 0.3s ease;
+  display: inline-block;
+  transition: all 0.2s ease-in-out;
 }
 
-.chip input[type="radio"]:checked + span {
-  background-color: #a00034;
-  color: white;
+.chip input:checked + span {
+  background: var(--brand, #b87b5a);
+  color: #fff;
+  border-color: var(--brand, #b87b5a);
+  padding: 12px 22px;
+  transform: scale(1.05);
 }
 
+/* === Botón enviar === */
 .actions {
-  text-align: center;
-  margin-top: 15px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 12px;
+  margin-top: 20px;
 }
 
 .actions button {
-  padding: 12px 28px;
-  border: none;
+  padding: 12px 18px;
+  border: 0;
   border-radius: 999px;
   background: #a00034;
   color: #fff;
   font-weight: 600;
-  font-family: 'Lora', serif;
   font-size: 15px;
   cursor: pointer;
-  transition: background 0.3s ease;
+  box-shadow: 0 6px 14px rgba(0,0,0,0.2);
+  transition: all 0.3s ease;
 }
 
 .actions button:hover {
-  background: #8a0030;
+  filter: brightness(0.9);
+  transform: translateY(-2px);
 }
 
-.success, .error {
-  display: none;
-  margin-top: 20px;
-  text-align: center;
-  font-family: 'Playfair Display', serif;
+/* === Animación del modal === */
+.modal .asistencia-content {
+  opacity: 0;
+  transform: translateY(-20px);
+  transition: opacity 1s ease, transform 1s ease;
 }
+
+.modal.show .asistencia-content {
+  opacity: 1;
+  transform: translateY(0);
+}
+
+/* === Campo acompañantes animado === */
+#rowAcompanantesNombres {
+  opacity: 0;
+  max-height: 0;
+  transform: translateY(-10px);
+  overflow: hidden;
+  transition: opacity 0.8s ease, max-height 0.8s ease, transform 0.8s ease;
+}
+
+#rowAcompanantesNombres.show {
+  opacity: 1;
+  max-height: 200px;
+  transform: translateY(0);
+}
+
 
 
   </style>
@@ -765,6 +829,7 @@ document.addEventListener("DOMContentLoaded", () => {
   }
 });
 </script>
+
 
 
 
