--- a/index.html
+++ b/index.html
@@ -626,12 +626,17 @@ label {
       <div style="text-align:center;">
         <img src="mi_foto_boda_v28.png" alt="Ceremonia" style="width:60px;margin-bottom:10px;">
         <h3 style="font-family:'Playfair Display',serif;font-size:22px;font-weight:700;color:#000;">Ceremonia religiosa</h3>
-        <p>La ceremonia religiosa tendrá lugar en la Catedral de Santa María la Real de Pamplona, un lugar único y lleno de historia.</p>
+        <p>La ceremonia religiosa tendrá lugar en la Catedral de Santa María la Real de Pamplona, 
+  un lugar único y lleno de historia que hemos elegido para dar el "sí quiero".<br>
+  Os esperamos el 17 de octubre de 2026 a las 12:00 del mediodía, 
+  para compartir junto a nosotros este momento tan especial.</p>
         <p>📍 <a href="https://www.google.com/maps/search/?api=1&query=42.819637,-1.641684" target="_blank">Ver ubicación en Google Maps</a></p>
         <br>
         <img src="mi_foto_boda_v34.png" alt="Banquete" style="width:60px;margin-bottom:10px;">
         <h3 style="font-family:'Playfair Display',serif;font-size:22px;font-weight:700;color:#000;">Banquete</h3>
-        <p>Continuaremos la celebración en el Palacio Cabo de Armería de Olloqui.</p>
+         <p>Continuaremos compartiendo este día tan especial en el Palacio Cabo de Armería de Olloqui,
+  un entorno con encanto donde disfrutaremos juntos de la comida, la celebración y, por supuesto, 
+  la fiesta hasta el final.</p>
         <p>📍 <a href="https://www.google.com/maps/search/?api=1&query=42.840699,-1.581877" target="_blank">Ver ubicación en Google Maps</a></p>
       </div>
     </div>
@@ -644,10 +649,11 @@ label {
       <div style="text-align:center;">
         <img src="mi_foto_boda_v38.png" alt="Cámara" style="width:60px;margin-bottom:8px;">
         <h3 style="font-family:'Playfair Display',serif;font-size:26px;font-weight:700;color:#a00034;">Rincón de los recuerdos</h3>
-        <p style="font-size:16px;line-height:1.6;color:#333;">
-          El día de nuestra boda estará inmortalizado por un fotógrafo profesional 📷,
-          pero también queremos ver la celebración a través de vuestros ojos.
-          Os invitamos a subir aquí las fotos espontáneas que hagáis con vuestro móvil.
+       <p>El día de nuestra boda estará inmortalizado por un fotógrafo profesional 📷, 
+  así que no os preocupéis, ¡tendremos fotos oficiales de cada momento!  
+  Pero también queremos ver la celebración a través de vuestros ojos 👀.  
+  Por eso, os invitamos a subir aquí todas las fotos espontáneas que hagáis con vuestro móvil:  
+  esos instantes divertidos, naturales y únicos que solo vosotros podéis captar.  </p>
         </p>
         <form id="recuerdosForm">
           <input type="file" id="foto" name="foto" accept="image/*" multiple required><br><br>
@@ -844,6 +850,7 @@ document.addEventListener("DOMContentLoaded", () => {
   }
 });
 </script>
+
 
 
 
