--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
   <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Lora&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400;700&display=swap" rel="stylesheet">
+
 
   <style>
     :root {
@@ -64,12 +66,16 @@
       to { opacity: 1; transform: translateY(0); }
     }
 
-    .title {
-      font-family: 'Great Vibes', cursive;
-      font-size: 58px;
-      color: #a00034;
-      margin-bottom: 10px;
-    }
+  .title {
+  font-family: 'Cinzel', serif; /* tipografía elegante como la imagen */
+  font-size: 64px;
+  letter-spacing: 3px; /* separación entre letras */
+  text-transform: uppercase; /* todo en mayúsculas */
+  color: #6b4a2b; /* tono marrón dorado suave */
+  font-weight: 700;
+  margin-bottom: 10px;
+}
+
 
     .subtitle {
       font-family: 'Bradley Hand ITC', cursive, sans-serif;
@@ -850,6 +856,7 @@ document.addEventListener("DOMContentLoaded", () => {
   }
 });
 </script>
+
 
 
 
