--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Boda de Alejandro & Andrea</title>
 
   <!-- Metadatos -->
-  <meta name="description" content="¡Bienvenidos a nuestro espacio de boda! Nos hace una enorme ilusión que nos acompañéis en este momento tan especial de nuestras vidas. Aquí podréis compartir con nosotros vuestras preferencias para que todo esté perfecto y también encontrar toda la información sobre la celebración. ¡Gracias de corazón por formar parte de nuestra historia! 💖">
+  <meta name="description" content="¡Bienvenidos a nuestro espacio de boda! Nos hace una enorme ilusión que nos acompañéis en este momento tan especial de nuestras vidas. Aquí podréis compartir con nosotros vuestras preferencias para que todo esté perfecto y también encontrar toda la información sobre la celebración. ¡Gracias de corazón por formar parte de nuestra historia!">
   <meta name="theme-color" content="#b87b5a">
   <meta name="author" content="Alejandro & Andrea">
   <meta name="robots" content="index, follow">
@@ -856,6 +856,7 @@ document.addEventListener("DOMContentLoaded", () => {
   }
 });
 </script>
+
 
 
 
