--- a/index.html
+++ b/index.html
@@ -487,7 +487,7 @@ label {
   <div id="page-wrapper">
 
     <header>
-      <h1 class="title">Boda de Alejandro & Andrea</h1>
+      <h1 class="title">Alejandro & Andrea</h1>
       <p class="subtitle">
         ¡Bienvenidos a nuestro espacio de boda! Nos hace una enorme ilusión que nos acompañéis en este momento tan especial de nuestras vidas.
         Aquí podréis compartir con nosotros vuestras preferencias para que todo esté perfecto y también encontrar toda la información sobre la celebración.
@@ -879,6 +879,7 @@ document.addEventListener("DOMContentLoaded", () => {
   }
 });
 </script>
+
 
 
 
