--- a/index.html
+++ b/index.html
@@ -100,56 +100,64 @@
       margin-bottom: 15px;
     }
 
-    #countdown {
-      display: flex;
-      justify-content: center;
-      gap: 15px;
-      flex-wrap: wrap;
-    }
 
-    .time-box {
-      background: rgba(255,255,255,0.7);
-      border: 2px solid #c9ab83;
-      border-radius: 16px;
-      padding: 15px 25px;
-      text-align: center;
-      box-shadow: 0 4px 12px rgba(0,0,0,0.1);
-    }
+#countdown {
+  display: flex;
+  justify-content: center;
+  align-items: stretch;
+  flex-wrap: nowrap; /* evita que los segundos se bajen */
+  gap: 20px;
+  margin-top: 20px;
+  overflow-x: auto; /* permite desplazarse en pantallas pequeñas sin romper */
+}
 
-    .time-box span {
-      font-size: 28px;
-      font-weight: bold;
-      color: var(--brand);
-      display: block;
-    }
-
-    .time-box small {
-      font-size: 14px;
-      font-family: 'Playfair Display', serif;
-    }
-
-    /* Fecha */
-   /* === ESTILO NUEVO DE LA FECHA (tipo invitación elegante) === */
-.date-box {
-  display: inline-block;
+.time-box {
+  background: rgba(255, 245, 230, 0.9);
+  border: 2px solid #c9ab83;
+  border-radius: 12px;
+  padding: 15px 20px;
   text-align: center;
-  margin: 40px auto;
-  padding: 30px 40px;
+  box-shadow: 0 4px 10px rgba(0,0,0,0.1);
+  min-width: 90px;
+  flex: 0 0 auto; /* mantiene los bloques en línea */
+}
+
+.time-box span {
+  font-size: 28px;
+  font-weight: bold;
+  color: var(--brand);
+  display: block;
+}
+
+.time-box small {
+  font-size: 14px;
+  color: var(--ink);
+  font-family: 'Playfair Display', serif;
+  text-transform: uppercase;
+}
+
+.date-box {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin: 50px auto;
+  padding: 30px 50px;
   background: #f8f1e3; /* fondo crema */
   border-radius: 20px;
-  border: 1px solid rgba(107, 74, 43, 0.3); /* borde suave marrón */
+  border: 1px solid rgba(107, 74, 43, 0.3);
   box-shadow: 0 4px 16px rgba(0,0,0,0.08);
   font-family: 'Cinzel', serif;
   color: #6b4a2b;
+  text-align: center;
   letter-spacing: 3px;
+  width: fit-content;
 }
 
 .date-box span {
-  display: block;
-  font-size: 30px;
+  font-size: 40px;
   font-weight: 700;
-  letter-spacing: 4px;
-  margin-bottom: 10px;
+  letter-spacing: 6px;
   color: #6b4a2b;
 }
 
@@ -162,6 +170,7 @@
   margin-top: 5px;
   letter-spacing: 2px;
 }
+
 
 
     /* Iconos */
@@ -879,6 +888,7 @@ document.addEventListener("DOMContentLoaded", () => {
   }
 });
 </script>
+
 
 
 
