--- a/index.html
+++ b/index.html
@@ -87,28 +87,27 @@
     }
 
     /* Cuenta atrás */
-    .countdown-section {
-      text-align: center;
-      margin: 40px auto;
-      animation: fadeUp 4s ease-in-out;
-    }
+   /* === CUENTA ATRÁS (centrada y equilibrada) === */
+.countdown-section {
+  text-align: center;
+  margin: 20px auto 40px;
+  padding: 20px;
+  max-width: 600px;
+}
 
-    .countdown-section h2 {
-      font-family: 'Great Vibes', cursive;
-      font-size: 36px;
-      color: #a00034;
-      margin-bottom: 15px;
-    }
-
+.countdown-section h2 {
+  font-family: 'Great Vibes', cursive; /* estilo elegante */
+  font-size: 36px;
+  margin-bottom: 20px;
+  color: #a00034;
+}
 
 #countdown {
   display: flex;
   justify-content: center;
-  align-items: stretch;
-  flex-wrap: nowrap; /* evita que los segundos se bajen */
-  gap: 20px;
-  margin-top: 20px;
-  overflow-x: auto; /* permite desplazarse en pantallas pequeñas sin romper */
+  align-items: center; /* centrado vertical */
+  gap: 15px;           /* separación uniforme */
+  flex-wrap: nowrap;   /* evita que los segundos se bajen */
 }
 
 .time-box {
@@ -118,15 +117,20 @@
   padding: 15px 20px;
   text-align: center;
   box-shadow: 0 4px 10px rgba(0,0,0,0.1);
-  min-width: 90px;
-  flex: 0 0 auto; /* mantiene los bloques en línea */
+
+  display: flex;               /* usa flexbox */
+  flex-direction: column;      /* coloca número y texto en columna */
+  justify-content: center;     /* centra verticalmente */
+  align-items: center;         /* centra horizontalmente */
+  min-width: 70px;             /* ancho mínimo */
+  flex: 0 0 auto;              /* evita que se comprima */
 }
 
 .time-box span {
+  display: block;
   font-size: 28px;
   font-weight: bold;
   color: var(--brand);
-  display: block;
 }
 
 .time-box small {
@@ -135,6 +139,7 @@
   font-family: 'Playfair Display', serif;
   text-transform: uppercase;
 }
+
 
 .date-box {
   display: flex;
@@ -888,6 +893,7 @@ document.addEventListener("DOMContentLoaded", () => {
   }
 });
 </script>
+
 
 
 
