--- a/index.html
+++ b/index.html
@@ -490,7 +490,10 @@ label {
   transform: translateY(0);
 }
 
-
+#successBox,
+#errorBox {
+  display: none;
+}
 
   </style>
 </head>
@@ -893,6 +896,7 @@ document.addEventListener("DOMContentLoaded", () => {
   }
 });
 </script>
+
 
 
 
