--- a/index.html
+++ b/index.html
@@ -507,6 +507,23 @@ label {
 #errorBox {
   display: none;
 }
+    /* === ANIMACIÓN SUAVE DE ENTRADA PARA TODOS LOS MODALES === */
+.modal .asistencia-content,
+.modal .traslado-content,
+.modal .recuerdos-content,
+.modal .ubicacion-content {
+  opacity: 0;
+  transform: scale(0.9) translateY(-10px); /* empieza más pequeño y arriba */
+  transition: opacity 0.6s ease, transform 0.6s ease;
+}
+
+.modal.show .asistencia-content,
+.modal.show .traslado-content,
+.modal.show .recuerdos-content,
+.modal.show .ubicacion-content {
+  opacity: 1;
+  transform: scale(1) translateY(0); /* se agranda suavemente y baja al sitio */
+}
 
   </style>
 </head>
@@ -908,6 +925,7 @@ document.addEventListener("DOMContentLoaded", () => {
   }
 });
 </script>
+
 
 
 
