--- a/index.html
+++ b/index.html
@@ -946,62 +946,77 @@ document.addEventListener("DOMContentLoaded", () => {
     });
   }
 
-  /* === FORMULARIO RECUERDOS === */
-  const recuerdosForm = document.getElementById("recuerdosForm");
-  const recuerdosMsg = document.getElementById("recuerdosMsg");
+/* === FORMULARIO RECUERDOS === */
+const recuerdosForm = document.getElementById("recuerdosForm");
+const recuerdosMsg = document.getElementById("recuerdosMsg");
+const fileInput = document.getElementById("foto");
 
-  if (recuerdosForm) {
-    recuerdosForm.addEventListener("submit", async (e) => {
-      e.preventDefault();
-      recuerdosMsg.innerHTML = "";
-      const files = document.getElementById("foto").files;
-      const submitBtn = recuerdosForm.querySelector('button[type="submit"]');
+if (recuerdosForm) {
+  recuerdosForm.addEventListener("submit", async (e) => {
+    e.preventDefault();
+    recuerdosMsg.innerHTML = "";
+    const files = fileInput.files;
+    const submitBtn = recuerdosForm.querySelector('button[type="submit"]');
 
-      if (files.length === 0) {
-        recuerdosMsg.textContent = "⚠️ Selecciona al menos una foto.";
-        return;
-      }
+    if (files.length === 0) {
+      recuerdosMsg.textContent = "⚠️ Selecciona al menos una foto.";
+      return;
+    }
 
-      submitBtn.disabled = true;
-      const spinner = document.createElement("span");
-      spinner.textContent = " ⏳";
-      submitBtn.appendChild(spinner);
+    submitBtn.disabled = true;
+    const spinner = document.createElement("span");
+    spinner.textContent = " ⏳";
+    submitBtn.appendChild(spinner);
 
-      for (const file of files) {
-        try {
-          const reader = new FileReader();
-          const base64 = await new Promise((resolve, reject) => {
-            reader.onloadend = () => resolve(reader.result.split(",")[1]);
-            reader.onerror = reject;
-            reader.readAsDataURL(file);
-          });
+    for (const file of files) {
+      try {
+        const reader = new FileReader();
+        const base64 = await new Promise((resolve, reject) => {
+          reader.onloadend = () => resolve(reader.result.split(",")[1]);
+          reader.onerror = reject;
+          reader.readAsDataURL(file);
+        });
 
-          const response = await fetch("https://script.google.com/macros/s/AKfycbwN9bUuAkucwZ3kpuYLdzDqGfnIgwzyQ-q5Wz5qxleE4LRKk5_A0nZ459TZrk4E9WZDvQ/exec", {
-            method: "POST",
-            body: new URLSearchParams({
-              foto: base64,
-              nombreArchivo: file.name,
-              mimeType: file.type
-            })
-          });
+        const response = await fetch("https://script.google.com/macros/s/AKfycbwN9bUuAkucwZ3kpuYLdzDqGfnIgwzyQ-q5Wz5qxleE4LRKk5_A0nZ459TZrk4E9WZDvQ/exec", {
+          method: "POST",
+          body: new URLSearchParams({
+            foto: base64,
+            nombreArchivo: file.name,
+            mimeType: file.type
+          })
+        });
 
-          const result = await response.json();
-          if (result.status === "ok") {
-            recuerdosMsg.innerHTML += `✅ ${file.name} subida correctamente<br>`;
-          } else {
-            recuerdosMsg.innerHTML += `❌ Error al subir ${file.name}<br>`;
-          }
-        } catch (err) {
-          recuerdosMsg.innerHTML += `⚠️ Fallo al subir ${file.name}: ${err.message}<br>`;
+        const result = await response.json();
+        if (result.status === "ok") {
+          recuerdosMsg.innerHTML += `✅ ${file.name} subida correctamente<br>`;
+        } else {
+          recuerdosMsg.innerHTML += `❌ Error al subir ${file.name}<br>`;
         }
+      } catch (err) {
+        recuerdosMsg.innerHTML += `⚠️ Fallo al subir ${file.name}: ${err.message}<br>`;
       }
+    }
 
-      submitBtn.disabled = false;
-      spinner.remove();
-    });
-  }
-});
+    submitBtn.disabled = false;
+    spinner.remove();
+  });
+}
+
+/* === MOSTRAR CUÁNTOS ARCHIVOS SE HAN SELECCIONADO === */
+if (fileInput && recuerdosMsg) {
+  fileInput.addEventListener("change", () => {
+    if (fileInput.files.length === 0) {
+      recuerdosMsg.textContent = "";
+    } else if (fileInput.files.length === 1) {
+      recuerdosMsg.textContent = `📷 ${fileInput.files[0].name}`;
+    } else {
+      recuerdosMsg.textContent = `📷 ${fileInput.files.length} archivos seleccionados`;
+    }
+  });
+}
+
 </script>
+
 
 
 
