--- a/index.html
+++ b/index.html
@@ -819,7 +819,7 @@ label {
     </div>
   </div>
   
-    <<script>
+    <script>
 document.addEventListener("DOMContentLoaded", () => {
   const pageWrapper = document.getElementById("page-wrapper");
   const modales = document.querySelectorAll(".modal");
@@ -1019,6 +1019,7 @@ if (fileInput && recuerdosMsg) {
 }
 
 </script>
+
 
 
 
