--- a/index.html
+++ b/index.html
@@ -589,18 +589,16 @@ label {
   transform: translateY(-2px);
 }
     /* === TEXTOS INFORMATIVOS UNIFICADOS EN MODALES === */
-#trasladoModal .traslado-content p,
-#recuerdosModal .recuerdos-content p,
-#ubicacionModal .ubicacion-content p {
+#trasladoModal .modal-content p,
+#recuerdosModal .modal-content p,
+#ubicacionModal .modal-content p {
   font-family: 'Bradley Hand ITC', cursive, sans-serif; /* misma letra que el subtítulo */
   font-size: 22px;
   color: #000;
   text-align: center;
   line-height: 1.6;
-  font-weight: 700; /* en negrita, como pediste antes */
+  font-weight: 700; /* en negrita */
 }
-
-
 
   </style>
 </head>
@@ -1004,6 +1002,7 @@ document.addEventListener("DOMContentLoaded", () => {
   }
 });
 </script>
+
 
 
 
