--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 
 
     .subtitle {
-      font-family: 'Bradley Hand ITC', cursive, sans-serif;
+      font-family: 'Cinzel', serif; /* tipografía elegante como la imagen */
       font-size: 22px;
       color: #5a4b2b;
       line-height: 1.6;
@@ -610,7 +610,7 @@ label {
 #trasladoModal .modal-content p,
 #recuerdosModal .modal-content p,
 #ubicacionModal .modal-content p {
-  font-family: 'Bradley Hand ITC', cursive, sans-serif; /* misma letra que el subtítulo */
+  font-family: 'Cinzel', serif; /* tipografía elegante como la imagen */
   font-size: 22px;
   color: #000;
   text-align: center;
@@ -1020,6 +1020,7 @@ document.addEventListener("DOMContentLoaded", () => {
   }
 });
 </script>
+
 
 
 
