--- a/index.html
+++ b/index.html
@@ -55,11 +55,19 @@
       user-select: none;
     }
 
-    header {
-      text-align: center;
-      padding: 40px 20px;
-      animation: fadeUp 2s ease-in-out;
-    }
+  header {
+  text-align: center;
+  padding: 40px 30px;
+  animation: fadeUp 2s ease-in-out;
+
+  border: 2px solid #6b4a2b; /* 🔹 mismo color que el texto del título */
+  border-radius: 25px;
+  max-width: 900px;
+  margin: 40px auto;
+  background: rgba(255, 255, 255, 0.25); /* 🔹 fondo sutil translúcido */
+  box-shadow: 0 6px 18px rgba(0,0,0,0.08);
+}
+
 
     @keyframes fadeUp {
       from { opacity: 0; transform: translateY(40px); }
@@ -1020,6 +1028,7 @@ document.addEventListener("DOMContentLoaded", () => {
   }
 });
 </script>
+
 
 
 
