--- a/index.html
+++ b/index.html
@@ -58,15 +58,48 @@
   header {
   text-align: center;
   padding: 40px 30px;
-  animation: fadeUp 2s ease-in-out;
-
-  border: 2px solid #6b4a2b; /* 🔹 mismo color que el texto del título */
+  animation: fadeUp 2s ease-in-out, drawBorder 2.5s ease forwards;
+  border: 2px solid transparent; /* empieza sin color */
   border-radius: 25px;
   max-width: 900px;
   margin: 40px auto;
-  background: rgba(255, 255, 255, 0.25); /* 🔹 fondo sutil translúcido */
+  background: rgba(255, 255, 255, 0.25);
   box-shadow: 0 6px 18px rgba(0,0,0,0.08);
+  position: relative;
+  overflow: hidden;
 }
+
+/* === EFECTO DIBUJADO DEL BORDE === */
+@keyframes drawBorder {
+  0% {
+    border-color: transparent;
+    box-shadow: 0 0 0 rgba(0,0,0,0);
+  }
+  30% {
+    border-color: #6b4a2b;
+    box-shadow: 0 0 0 rgba(0,0,0,0);
+  }
+  100% {
+    border-color: #6b4a2b; /* mismo tono que el texto */
+    box-shadow: 0 6px 18px rgba(0,0,0,0.08);
+  }
+}
+
+/* === FADE-IN DEL CONTENIDO INTERIOR === */
+header .title,
+header .subtitle {
+  opacity: 0;
+  animation: textFadeIn 2s ease forwards;
+}
+
+header .title { animation-delay: 0.5s; }
+header .subtitle { animation-delay: 1.2s; }
+
+@keyframes textFadeIn {
+  from { opacity: 0; transform: translateY(10px); }
+  to { opacity: 1; transform: translateY(0); }
+}
+
 
 
     @keyframes fadeUp {
@@ -1028,6 +1061,7 @@ document.addEventListener("DOMContentLoaded", () => {
   }
 });
 </script>
+
 
 
 
